--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/BreakpointDetail.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/BreakpointDetail.axaml
@@ -12,7 +12,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="350" MinWidth="500"
              x:DataType="vm:BreakpointDetailViewModel"
              x:Class="Modern.Vice.PdbMonitor.Views.BreakpointDetail">
-  <Grid Margin="8">
+  <Grid Margin="8" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,*,Auto,Auto">
     <Grid.Styles>
       <Style Selector="Label">
         <Setter Property="VerticalAlignment" Value="Center" />
@@ -26,21 +26,6 @@
         <Setter Property="VerticalAlignment" Value="Center" />
       </Style>
     </Grid.Styles>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="Auto" />
-      <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
-    </Grid.RowDefinitions>
     <CheckBox Grid.Column="1" IsChecked="{Binding Breakpoint.IsEnabled, Mode=TwoWay}">Is enabled</CheckBox>
 
     <Label Grid.Column="0" Grid.Row="1">Address start</Label>
