Rewrites breakpoint handling, adds unbound and global variable bound breakpoints

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
@@ -67,4 +67,8 @@
   <Style Selector="ctl|DockSizer">
     <Setter Property="Background" Value="LightGray" />
   </Style>
+  <!-- handling errors as tooltips -->
+  <Style Selector="DataValidationErrors">
+    <Setter Property="Theme" Value="{StaticResource TooltipDataValidationErrors}" />
+  </Style>
 </Styles>
