Implements go to definition and go to declaration on both functions and variables

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
@@ -38,6 +38,8 @@
       <ContextMenu>
         <MenuItem Header="Go To Implementation" Command="{Binding GoToImplementationCommand}"
           CommandParameter="{Binding ContextFunctionReference}"/>
+        <MenuItem Header="Go To Definition" Command="{Binding GoToDefinitionCommand}"
+          CommandParameter="{Binding ContextWithDefinitionReference}"/>
       </ContextMenu>
     </ae:TextEditor.ContextMenu>
   </ae:TextEditor>
