--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
@@ -4,84 +4,105 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:v="clr-namespace:Modern.Vice.PdbMonitor.Views"
              xmlns:cve="clr-namespace:Modern.Vice.PdbMonitor.Controls.ValueEditors"
+             xmlns:svg="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
              xmlns:c="clr-namespace:Modern.Vice.PdbMonitor.Converters"
              xmlns:b="clr-namespace:Modern.Vice.PdbMonitor.Behaviors"
              xmlns:vm="clr-namespace:Modern.Vice.PdbMonitor.Engine.ViewModels;assembly=Modern.Vice.PdbMonitor.Engine"
-             x:DataType="vm:VariablesViewModel"
+             x:DataType="vm:VariablesCoreViewModel"
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="120"
              x:Class="Modern.Vice.PdbMonitor.Views.Variables">
-  <DataGrid Name="Grid" ItemsSource="{Binding Items}" FontFamily="{StaticResource CodeFont}"
-    CanUserSortColumns="False">
-    <DataGrid.Styles>
-      <Style Selector="TextBlock">
-        <Setter Property="FontSize" Value="12" />
-      </Style>
-    </DataGrid.Styles>
-    <DataGrid.Resources>
-      <c:HexAddressConverter x:Key="HexAddressConverter" />
-      <c:HexAddressConverter x:Key="HexAddressConverterWithTrim" TrimToByte="True" />
-      <c:HexAddressConverter x:Key="HexAddressConverterForEdit" TrimToByte="True" Prefix="" />
-      <c:HexValueConverter x:Key="HexValueConverter" />
-      <c:ByteArrayToTextConverter x:Key="ByteArrayToTextConverter" />
-      <c:LevelToMarginConverter x:Key="LevelToMarginConverter" />
-      <c:BoolToStringConverter x:Key="ExpandedToStringConverter" OnTrue="-" OnFalse="+" />
-      <c:ByteToCharConverter x:Key="ByteToCharConverter" />
-      <!-- edit converters -->
-      <c:Uint16ValueEditConverter x:Key="Uint16ValueEditConverter" />
-    </DataGrid.Resources>
-    <DataGrid.Columns>
-      <DataGridTemplateColumn Header="Name" Width="400">
-        <DataGridTemplateColumn.CellTemplate>
-          <DataTemplate DataType="vm:VariableSlot">
-            <StackPanel Orientation="Horizontal" Margin="{Binding Level, Converter={StaticResource LevelToMarginConverter}}">
-              <Button Margin="2, 0" IsVisible="{Binding IsExpandable}" FontSize="10"
-                Command="{Binding #Grid.DataContext.ToggleVariableExpansionCommand}" CommandParameter="{Binding}"
-                Content="{Binding IsExpanded, Converter={StaticResource ExpandedToStringConverter}}" />
-              <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
-            </StackPanel> 
-          </DataTemplate>
-        </DataGridTemplateColumn.CellTemplate>
-      </DataGridTemplateColumn>
-      <DataGridTemplateColumn Header="Value" Width="200">
-        <DataGridTemplateColumn.CellTemplate>
-          <DataTemplate DataType="vm:VariableSlot">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-              <TextBlock Text="{Binding VariableValue}" IsVisible="{Binding IsDefaultRepresentation}" />
-              <TextBlock Text="{Binding VariableValue, StringFormat=${0}, Converter={StaticResource HexValueConverter}, Mode=OneWay}"
-                IsVisible="{Binding IsHexRepresentation}" />
-              <TextBlock Text="{Binding VariableValue, StringFormat=\'{0}\', Converter={StaticResource ByteToCharConverter}, Mode=OneWay}"
-                IsVisible="{Binding CanBeChar}" Foreground="Gray" Margin="4,0" />
-              <TextBlock Text="{Binding EnumValue, StringFormat=({0}), Mode=OneWay}"
-                IsVisible="{Binding IsEnum}" Foreground="Gray" Margin="4,0" />
-              <ProgressBar IsIndeterminate="True" IsVisible="{Binding !HasValue}" Margin="4,0" MinWidth="80" />
-            </StackPanel>
-          </DataTemplate>
-        </DataGridTemplateColumn.CellTemplate>
-        <DataGridTemplateColumn.CellEditingTemplate>
-          <v:VariableEditTemplateSelector>
-            <v:VariableEditTemplateSelector.Templates>
-              <DataTemplate x:Key="ValueType">
-                <cve:NumericVariableEditor ViewModel="{Binding #Grid.DataContext}" />
-              </DataTemplate>
-              <DataTemplate x:Key="Bool">
-                <cve:BoolVariableEditor ViewModel="{Binding #Grid.DataContext}" />
-              </DataTemplate>
-              <DataTemplate x:Key="Enum">
-                <cve:EnumVariableEditor ViewModel="{Binding #Grid.DataContext}" />
-              </DataTemplate>
-            </v:VariableEditTemplateSelector.Templates>
-          </v:VariableEditTemplateSelector>
-        </DataGridTemplateColumn.CellEditingTemplate>
-      </DataGridTemplateColumn>
-      <DataGridTextColumn Header="Address" Binding="{Binding Address, Converter={StaticResource HexAddressConverter}, Mode=OneWay}"
-          IsReadOnly="True" Width="100" />
-      <DataGridTextColumn Header="Base" Binding="{Binding Base, Converter={StaticResource HexAddressConverterWithTrim}, Mode=OneWay}"
-        IsReadOnly="True" Width="80" />
-      <DataGridTextColumn Header="Size" Binding="{Binding Size}" IsReadOnly="True" Width="40" />
-      <DataGridTextColumn Header="Type" Binding="{Binding ValueType}" IsReadOnly="True" Width="90" />
-      <DataGridCheckBoxColumn Header="Global" Binding="{Binding IsGlobal}" IsReadOnly="True" />
-      <DataGridTextColumn Header="Bytes" Binding="{Binding Data, Converter={StaticResource ByteArrayToTextConverter}, Mode=OneWay}"
-          IsReadOnly="True" Width="200" />
-    </DataGrid.Columns>
-  </DataGrid>
+  <DockPanel LastChildFill="True">
+    <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
+      <Button Command="{Binding RemoveAllCommand}" Width="32" Height="32" ToolTip.Tip="Remove all">
+        <Image>
+          <Image.Source>
+            <svg:SvgImage Source="/Assets/Icons/trash.svg" />
+          </Image.Source>
+        </Image>
+      </Button>
+    </StackPanel>
+    <DataGrid Name="Grid" ItemsSource="{Binding Items}" FontFamily="{StaticResource CodeFont}"
+      CanUserSortColumns="False">
+      <DataGrid.Styles>
+        <Style Selector="TextBlock">
+          <Setter Property="FontSize" Value="12" />
+        </Style>
+        <Style Selector="DataGridRow">
+          <Setter Property="ContextMenu">
+            <Setter.Value>
+              <ContextMenu>
+                <MenuItem Header="Remove" Command="{Binding #Grid.DataContext.RemoveVariableCommand}" CommandParameter="{Binding}" />
+              </ContextMenu >
+            </Setter.Value>
+          </Setter>
+        </Style>
+      </DataGrid.Styles>
+      <DataGrid.Resources>
+        <c:HexAddressConverter x:Key="HexAddressConverter" />
+        <c:HexAddressConverter x:Key="HexAddressConverterWithTrim" TrimToByte="True" />
+        <c:HexAddressConverter x:Key="HexAddressConverterForEdit" TrimToByte="True" Prefix="" />
+        <c:HexValueConverter x:Key="HexValueConverter" />
+        <c:ByteArrayToTextConverter x:Key="ByteArrayToTextConverter" />
+        <c:LevelToMarginConverter x:Key="LevelToMarginConverter" />
+        <c:BoolToStringConverter x:Key="ExpandedToStringConverter" OnTrue="-" OnFalse="+" />
+        <c:ByteToCharConverter x:Key="ByteToCharConverter" />
+        <!-- edit converters -->
+        <c:Uint16ValueEditConverter x:Key="Uint16ValueEditConverter" />
+      </DataGrid.Resources>
+      <DataGrid.Columns>
+        <DataGridTemplateColumn Header="Name" Width="400">
+          <DataGridTemplateColumn.CellTemplate>
+            <DataTemplate DataType="vm:VariableSlot">
+              <StackPanel Orientation="Horizontal" Margin="{Binding Level, Converter={StaticResource LevelToMarginConverter}}">
+                <Button Margin="2, 0" IsVisible="{Binding IsExpandable}" FontSize="10"
+                  Command="{Binding #Grid.DataContext.ToggleVariableExpansionCommand}" CommandParameter="{Binding}"
+                  Content="{Binding IsExpanded, Converter={StaticResource ExpandedToStringConverter}}" />
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+              </StackPanel>
+            </DataTemplate>
+          </DataGridTemplateColumn.CellTemplate>
+        </DataGridTemplateColumn>
+        <DataGridTemplateColumn Header="Value" Width="200">
+          <DataGridTemplateColumn.CellTemplate>
+            <DataTemplate DataType="vm:VariableSlot">
+              <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock Text="{Binding VariableValue}" IsVisible="{Binding IsDefaultRepresentation}" />
+                <TextBlock Text="{Binding VariableValue, StringFormat=${0}, Converter={StaticResource HexValueConverter}, Mode=OneWay}"
+                  IsVisible="{Binding IsHexRepresentation}" />
+                <TextBlock Text="{Binding VariableValue, StringFormat=\'{0}\', Converter={StaticResource ByteToCharConverter}, Mode=OneWay}"
+                  IsVisible="{Binding CanBeChar}" Foreground="Gray" Margin="4,0" />
+                <TextBlock Text="{Binding EnumValue, StringFormat=({0}), Mode=OneWay}"
+                  IsVisible="{Binding IsEnum}" Foreground="Gray" Margin="4,0" />
+                <!--<ProgressBar IsIndeterminate="True" IsVisible="{Binding !HasValue}" Margin="4,0" MinWidth="80" />-->
+              </StackPanel>
+            </DataTemplate>
+          </DataGridTemplateColumn.CellTemplate>
+          <DataGridTemplateColumn.CellEditingTemplate>
+            <v:VariableEditTemplateSelector>
+              <v:VariableEditTemplateSelector.Templates>
+                <DataTemplate x:Key="ValueType">
+                  <cve:NumericVariableEditor ViewModel="{Binding #Grid.DataContext}" />
+                </DataTemplate>
+                <DataTemplate x:Key="Bool">
+                  <cve:BoolVariableEditor ViewModel="{Binding #Grid.DataContext}" />
+                </DataTemplate>
+                <DataTemplate x:Key="Enum">
+                  <cve:EnumVariableEditor ViewModel="{Binding #Grid.DataContext}" />
+                </DataTemplate>
+              </v:VariableEditTemplateSelector.Templates>
+            </v:VariableEditTemplateSelector>
+          </DataGridTemplateColumn.CellEditingTemplate>
+        </DataGridTemplateColumn>
+        <DataGridTextColumn Header="Address" Binding="{Binding Address, Converter={StaticResource HexAddressConverter}, Mode=OneWay}"
+            IsReadOnly="True" Width="100" />
+        <DataGridTextColumn Header="Base" Binding="{Binding Base, Converter={StaticResource HexAddressConverterWithTrim}, Mode=OneWay}"
+          IsReadOnly="True" Width="80" />
+        <DataGridTextColumn Header="Size" Binding="{Binding Size}" IsReadOnly="True" Width="40" />
+        <DataGridTextColumn Header="Type" Binding="{Binding ValueType}" IsReadOnly="True" Width="90" />
+        <DataGridCheckBoxColumn Header="Global" Binding="{Binding IsGlobal}" IsReadOnly="True" />
+        <DataGridTextColumn Header="Bytes" Binding="{Binding Data, Converter={StaticResource ByteArrayToTextConverter}, Mode=OneWay}"
+            IsReadOnly="True" Width="200" />
+      </DataGrid.Columns>
+    </DataGrid>
+  </DockPanel>
 </UserControl>
