--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
@@ -34,6 +34,15 @@
     <Setter Property="FontFamily" Value="{StaticResource CodeFont}" />
     <Setter Property="HorizontalAlignment" Value="Center" />
   </Style>
+  <Style Selector="TextBlock.pc_value">
+    <Setter Property="FontFamily" Value="{StaticResource CodeFont}" />
+    <Setter Property="FontSize" Value="12" />
+  </Style>
+  <Style Selector="TextBlock.pc_label">
+    <Setter Property="FontFamily" Value="{StaticResource CodeFont}" />
+    <Setter Property="Foreground" Value="Gray" />
+    <Setter Property="FontSize" Value="12" />
+  </Style>
   <Style Selector="TreeViewItem">
     <Setter Property="MinHeight" Value="0" />
   </Style>
