Adds memory viewer

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
@@ -7,6 +7,7 @@
     <!-- default font family for code -->
     <FontFamily x:Key="CodeFont">resm:Modern.Vice.PdbMonitor.Assets.Fonts.?assembly=Modern.Vice.PdbMonitor#Fira Code</FontFamily>
     <FontFamily x:Key="C64Mono">resm:Modern.Vice.PdbMonitor.Assets.Fonts.?assembly=Modern.Vice.PdbMonitor#C64 Pro Mono</FontFamily>
+    <Color x:Key="OddRowBackground">#3DD3D3D3</Color>
   </Application.Resources>
   <Application.Styles>
     <FluentTheme />
